k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: insights-web
  namespace: cloudcrafter
  labels:
    app: insights-web
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: insights-web
